[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/characters/death/character_death_big_explosion.gd" type="Script" id=3]
[ext_resource path="res://assets/sfx/megaship/death.wav" type="AudioStream" id=6]

[node name="Death" type="Node2D"]
script = ExtResource( 3 )

[node name="SndDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="ExplosionTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
